# Self-Exploration

./: .gitignore  README.md  main.py  settings.py  tool_features.py
Nemotron/: .env.example  README.md  __init__.py  main.py  requirements.txt  settings.py
Openclaw/: README.md  openclaw.json  pyproject.toml
Openclaw/src/: __init__.py  config.py  main.py
Openclaw/src/api/: agent_router.py  routes.py
Openclaw/src/core/: security.py  session_manager.py
Openclaw/src/schemas/: agent_response.py  message.py
Openclaw/src/services/: __init__.py  openclaw_ws_client.py
